# networkd-plasmoid

./: .gitmodules  CMakeLists.txt
dataengine/: CMakeLists.txt  networkd_engine.cc  networkd_engine.h  plasma-dataengine-networkd.desktop  plasma-dataengine-wpa_supplicant.desktop  wpa_supplicant_engine.cc  wpa_supplicant_engine.h
wpa_ctrl/: CMakeLists.txt  README
